components/fleetman-microservices/webapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: fleetman-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: richardchesterwood/k8s-fleetman-webapp-angular:release2
        name: webapp
