components/fleetman-microservices/api-gateway-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
  namespace: fleetman-microservices
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8080
