components/fleetman-microservices/mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-mongodb
  namespace: fleetman-microservices
spec:
  selector:
    app: mongodb
  ports:
    - name: http
      port: 27017
