components/fleetman-microservices/position-tracker-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
  namespace: fleetman-microservices
spec:
  selector:
    app: position-tracker
  ports:
    - name: http
      port: 8080
