components/fleetman-microservices/queue-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
  namespace: fleetman-microservices
spec:
  selector:
    app: queue
  ports:
    - name: http
      port: 8161
      nodePort: 30010
    - name: endpoint
      port: 61616

  type: NodePort
