components/fleetman-microservices/webapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: fleetman-microservices
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: webapp
