components/fleetman-microservices/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleetman
  namespace: fleetman-microservices
  annotations:
    cert-manager.io/cluster-issuer: mkcert-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: fleetman.kindcluster.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
  tls:
    - hosts:
      - fleetman.kindcluster.dev
      secretName: fleetman-tls
